Fix old tests for Null, NotNull etc